<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recordsdetail.ListRecordDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/ic_edit"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number_record_detail"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/rdNoRegister"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="Today"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_driver_record_detail"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/rdDateToday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="Today"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_driver_record_detail"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/rdDriverName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="Today"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/companion_driver_record_detail"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/rdCompanion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="Today"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/company_driver_record_detail"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/rdCompany"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="Today"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/plate_driver_record_detail"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/rdPlate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="Today"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reason_for_visit_driver_record_detail"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/rdReason"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="Today"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/check_in_time_driver_record_detail"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/rdCheckIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="Today"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/check_out_time_driver_record_detail"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/rdCheckOut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="Today"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_driver_record_detail"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/rdUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="Today"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/is_synced_driver_record_detail"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/rdIsSynced"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="Today"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnCheckOut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/red"
                            android:layout_marginEnd="16dp"
                            android:text="@string/check_out_button_time_driver_record_detail"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <TextView
                            android:id="@+id/tvTimeOut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="Now"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primary"
            android:text="@string/confirm_driver_record_detail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>